--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Campgrounds</title>
-</head>
+<% layout('layouts/boilerplate')%>
 
 <body>
     <h1>Edit Campground</h1>
@@ -21,6 +14,3 @@
         <button>Save Campground</button>
     </form>
     <a href="/campgrounds/<%= campground._id%>">Back to Campground</a>
-
-</body>
-</html>
