--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Campgrounds</title>
-</head>
+<% layout('layouts/boilerplate')%>
 
-<body>
     <form action="/campgrounds" method="POST">
         <div>
             <label for="title">Title</label>
@@ -21,5 +13,3 @@
     </form>
     <a href="/campgrounds">Back</a>
 
-</body>
-</html>
