added img desc price to seed and display it

--- a/YelpCamp/views/home.ejs
+++ b/YelpCamp/views/home.ejs
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
-</head>
-<body>
-    <h1>WELCOME TO HELL</h1>
-</body>
-</html>
+<% layout('layouts/boilerplate')%>
+    
+
+    <h1 class="badge bg-secondary">BE YOU READY TO CAMP</h1>
+
+    <a href="/campgrounds">CLICK HERE TO ENTER</a>
+
