--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -6,6 +6,8 @@
     <h2>
         <%= campground.location %>
     </h2>
+    <img src="<%= campground.image %>" alt="">
+    <p><%= campground.description %></p>
     <P>
         <a href="/campgrounds/<%= campground._id%>/edit">Edit</a>
     </P>
