i edited index and home to add style to index display

--- a/YelpCamp/views/home.ejs
+++ b/YelpCamp/views/home.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
     
 
-    <h1 class="badge bg-secondary">BE YOU READY TO CAMP</h1>
+    <h1 class="badge bg-secondary">ARE YOU READY TO CAMP</h1>
 
     <a href="/campgrounds">CLICK HERE TO ENTER</a>
 
