--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -36,9 +36,11 @@
                         required><%=campground.description%></textarea>
                 </div>
                 <div class="mb-3">
-                    <button class="btn btn-info">Save Campground</button>
+                    <button class="btn btn-primary">Save Campground</button>
                 </div>
             </form>
-            <a href="/campgrounds/<%= campground._id%>">Back to Campground</a>
+            <div class="mb-3">
+            <a  href="/campgrounds/<%= campground._id%>">Back to Campground</a>
+            </div>
         </div>
     </div>
