added validation to the forms

--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,8 +1,8 @@
     <% layout('layouts/boilerplate')%>
-    <h1>All CAMPGROUNDS</h1>
-    <div>
-        <a href="/campgrounds/new">Add Campground</a>
-    </div>
+    <h1 class="mt-2">All CAMPGROUNDS</h1>
+     <div>
+        <!-- <a href="/campgrounds/new">Add Campground</a> -->
+    </div> 
     <% for(let campground of campgrounds){ %>
         <div class="card mb-3" >
             <div class="row">
