--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -3,36 +3,55 @@
     <div class="row">
         <h1 class="text-center">New Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="POST">
+            <form action="/campgrounds" method="POST" novalidate class="needs-validation">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]" required>
+                    <div class="invalid-feedback">
+                        Please enter a title for campground
+                    </div>
+
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>
                     <input class="form-control" type="text" id="location" name="campground[location]" required>
+                    <div class="invalid-feedback">
+                        Please enter a location for the campground.
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image Url</label>
                     <input class="form-control" type="text" id="image" name="campground[image]" required>
+                    <div class="invalid-feedback">
+                        Please enter url for image.
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="price">Price</label>
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="price-label">$</span>
-                        <input type="text" class="form-control" id="price" aria-label="price" aria-describedby="price-label" name="campground[price]" required>
+                        <input type="text" class="form-control" id="price" aria-label="price"
+                            aria-describedby="price-label" name="campground[price]" required>
                         <span class="input-group-text" id="price-label">.00</span>
-                      </div>
-                      
+                        <div class="invalid-feedback">
+                            Please enter the price.
+                        </div>
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
+                    <textarea class="form-control" type="text" id="description" name="campground[description]"
+                        required></textarea>
+                    <div class="invalid-feedback">
+                        Please enter a discription for your campground.
+                    </div>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-success">Add Campground</button>
                 </div>
             </form>
-            <a href="/campgrounds">Back</a>        
+            <a href="/campgrounds">Back</a>
         </div>
     </div>
+
+    
