--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -24,14 +24,18 @@
             </div>
           </div>
           <h2>Leave a Review</h2>
-        <form action="/campgrounds/<%=campground._id%>/reviews" method="POST">
+        <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="needs-validation" novalidate>
           <div class="mb-3">
             <label class="form-label" for="rating">Rating</label>
             <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
           </div>
           <div class="mb-3">
             <label class ="form-label" for="body">Review</label>
-            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="4"></textarea>
+            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="4" required></textarea>
+            <div class="invalid-feedback">
+              Enter a Review
+          </div>
+          <div class="valid-feedback"></div>
           </div>
           <button class="btn btn-primary">submit</button>
         </form>
