--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,5 +1,5 @@
     <% layout('layouts/boilerplate')%>
-    <h1 class="mt-2">All CAMPGROUNDS</h1>
+    <h1 class="mt-2">ALL CAMPGROUNDS</h1>
      <div>
         <!-- <a href="/campgrounds/new">Add Campground</a> -->
     </div> 
