--- a/YelpCamp/views/partials/navbar.ejs
+++ b/YelpCamp/views/partials/navbar.ejs
@@ -1,15 +1,21 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">StillSites</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link"  href="/">Home</a>
-          <a class="nav-link" href="/campgrounds">Campgrounds</a>
-          <a class="nav-link" href="/campgrounds/new">Add Campground</a>
-        </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">StillSites</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="/campgrounds">Campgrounds</a>
+        <a class="nav-link" href="/campgrounds/new">Add Campground</a>
+      </div>
+      <div class="navbar-nav ml-auto">
+        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/register">sign Up</a>
+        <a class="nav-link" href="/logout">Logout</a>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
