--- a/YelpCamp/views/partials/navbar.ejs
+++ b/YelpCamp/views/partials/navbar.ejs
@@ -12,9 +12,12 @@
         <a class="nav-link" href="/campgrounds/new">Add Campground</a>
       </div>
       <div class="navbar-nav ml-auto">
+        <% if (!currentUser) {%>
         <a class="nav-link" href="/login">Login</a>
         <a class="nav-link" href="/register">sign Up</a>
+        <% } else{%>
         <a class="nav-link" href="/logout">Logout</a>
+        <%} %> 
       </div>
     </div>
   </div>
