--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -22,6 +22,7 @@
           <li class="list-group-item">$<%= campground.price %>
           </li>
         </ul>
+        <% if( currentUser && campground.author.equals(currentUser._id)){ %> 
         <div class="card-body">
           <a class="card-link btn btn-primary" href="/campgrounds/<%= campground._id%>/edit">Edit</a>
           <!-- <a class="card-link btn btn-primary" href="/campgrounds">Back</a> -->
@@ -29,6 +30,7 @@
             <button class="btn btn-danger">Delete</button>
           </form>
         </div>
+        <% } %> 
         <div class="card-footer text-muted">
           2 days ago
         </div>
