--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -22,21 +22,22 @@
           <li class="list-group-item">$<%= campground.price %>
           </li>
         </ul>
-        <% if( currentUser && campground.author.equals(currentUser._id)){ %> 
-        <div class="card-body">
-          <a class="card-link btn btn-primary" href="/campgrounds/<%= campground._id%>/edit">Edit</a>
-          <!-- <a class="card-link btn btn-primary" href="/campgrounds">Back</a> -->
-          <form class="d-inline" action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
-            <button class="btn btn-danger">Delete</button>
-          </form>
-        </div>
-        <% } %> 
-        <div class="card-footer text-muted">
-          2 days ago
-        </div>
+        <% if( currentUser && campground.author.equals(currentUser._id)){ %>
+          <div class="card-body">
+            <a class="card-link btn btn-primary" href="/campgrounds/<%= campground._id%>/edit">Edit</a>
+            <!-- <a class="card-link btn btn-primary" href="/campgrounds">Back</a> -->
+            <form class="d-inline" action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
+              <button class="btn btn-danger">Delete</button>
+            </form>
+          </div>
+          <% } %>
+            <div class="card-footer text-muted">
+              2 days ago
+            </div>
       </div>
-      </div>
-      <div class="col-6">
+    </div>
+    <div class="col-6">
+      <% if(currentUser){ %> 
       <h2>Leave a Review</h2>
       <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="needs-validation" novalidate>
         <div class="mb-3">
@@ -53,6 +54,7 @@
         </div>
         <button class="btn btn-primary">submit</button>
       </form>
+      
       <% for(let review of campground.reviews) { %>
         <div class="card mb-3">
           <div class="card-body">
@@ -66,5 +68,6 @@
           </div>
         </div>
         <% } %>
+        <% } %> 
     </div>
   </div>
