--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -54,20 +54,26 @@
         </div>
         <button class="btn btn-primary">submit</button>
       </form>
+      <% } %>
       
       <% for(let review of campground.reviews) { %>
         <div class="card mb-3">
           <div class="card-body">
             <h5 class="card-title">Rating: <%= review.rating %>
             </h5>
+            <h5 class="card-title">By: <%= review.author.username %>
+            </h5>
+            
             <p class="card-text">Review: <%= review.body %>
             </p>
+            <% if( currentUser && review.author.equals(currentUser._id)){ %>
             <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
               <button class=" btn btn-sm btn-danger">Delete</button>
             </form>
+            <% } %> 
           </div>
         </div>
         <% } %>
-        <% } %> 
+         
     </div>
   </div>
