the ratings are now shown by stars using lunar logic starability

--- a/YelpCamp/views/layouts/boilerplate.ejs
+++ b/YelpCamp/views/layouts/boilerplate.ejs
@@ -26,8 +26,8 @@
         integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
         crossorigin="anonymous"></script>
 
-        <!-- <script src ='../../public/javascripts/validateForm.js'></script>     -->
-        <script>
+        <script src ='/javascripts/validateForm.js'></script>    
+        <!-- <script>
             (() => {
     'use strict'
 
@@ -46,7 +46,7 @@
         }, false)
     })
 })()
-        </script>
+        </script> -->
 
 
 </body>
