--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -19,7 +19,12 @@
                         Please enter a location for the campground.
                     </div>
                 </div>
-                <input type="file" name="image" id="" multiple>
+                <div class="mb-3">
+                    <label for="image" class="form-label">Upload Images</label>
+                    <input class="form-control" type="file" name="image" id="image" multiple>
+                  </div>
+                  
+
                 <!-- <div class="mb-3">
                     <label class="form-label" for="image">Image Url</label>
                     <input class="form-control" type="text" id="image" name="campground[image]" required>
