--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -55,6 +55,15 @@
                         </div>
                 </div>
                 <div class="mb-3">
+                    <% campground.images.forEach(function(img,i) { %>
+                        <img src="<%= img.url %>" class="img-thumbnail" alt="">
+                        <div class="form-check-inline">
+                            <input type="checkbox" name="deleteImages[]" id="image-<%=i%> " value="<%= img.filename %>">
+                        </div>
+                        <label for="image-<%=i%>">Delete</label>
+                        <% }) %>  
+                </div>
+                <div class="mb-3">
                     <button class="btn btn-primary">Save Campground</button>
                 </div>
             </form>
