--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -56,11 +56,13 @@
                 </div>
                 <div class="mb-3">
                     <% campground.images.forEach(function(img,i) { %>
-                        <img src="<%= img.url %>" class="img-thumbnail" alt="">
+
+                        <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
                         <div class="form-check-inline">
                             <input type="checkbox" name="deleteImages[]" id="image-<%=i%> " value="<%= img.filename %>">
-                        </div>
-                        <label for="image-<%=i%>">Delete</label>
+                            <label for="image-<%=i%>">Delete</label>
+                        </div><br>
+                        
                         <% }) %>  
                 </div>
                 <div class="mb-3">
