--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -7,7 +7,14 @@
         <div class="card mb-3" >
             <div class="row">
                 <div class="col-md-4">
-                    <img class ="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                    <% if (campground.images.length) { %>
+                        <img class ="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                     
+                    <% }else { %> 
+                        <img class ="img-fluid" alt="" src="https://res.cloudinary.com/cypher12/image/upload/v1661765423/YelpCamp/abfipvijgtrdhjzwcvgd.jpg">
+
+
+                    <% } %> 
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
