--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,4 +1,6 @@
     <% layout('layouts/boilerplate')%>
+
+    <div id="map" style="width:100%; height: 500px"></div>
     <h1 class="mt-2">ALL CAMPGROUNDS</h1>
      <div>
         <!-- <a href="/campgrounds/new">Add Campground</a> -->
@@ -29,6 +31,12 @@
             </div>
         </div>
         <%}%>
+
+        <script>
+            const mapToken = '<%- process.env.MAPBOX_TOKEN %>'
+          </script>
+
+        <script src = "/javascripts/clusterMap.js"></script>
 
 
 
