removed inline commands and added controls to the map

--- a/YelpCamp/views/layouts/boilerplate.ejs
+++ b/YelpCamp/views/layouts/boilerplate.ejs
@@ -12,7 +12,7 @@
     
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' />
-
+    <link ref="stylesheet" href ="/stylesheets/app.css">
 
 </head>
 
@@ -31,7 +31,8 @@
         integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
         crossorigin="anonymous"></script>
 
-        <script src ='/javascripts/validateForm.js'></script>    
+        <script src ='/javascripts/validateForm.js'></script> 
+           
         <!-- <script>
             (() => {
     'use strict'
