--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,10 +1,13 @@
     <% layout('layouts/boilerplate')%>
+    <link rel="stylesheet" href="/stylesheets/app.css">
 
-    <div id="map" style="width:100%; height: 500px"></div>
+
+    <div id="cluster-map"></div>
     <h1 class="mt-2">ALL CAMPGROUNDS</h1>
      <div>
         <!-- <a href="/campgrounds/new">Add Campground</a> -->
     </div> 
+    <div class="container">
     <% for(let campground of campgrounds){ %>
         <div class="card mb-3" >
             <div class="row">
@@ -31,6 +34,7 @@
             </div>
         </div>
         <%}%>
+    </div>
 
         <script>
             const mapToken = '<%- process.env.MAPBOX_TOKEN %>'
