--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,11 +1,12 @@
 <% layout('layouts/boilerplate')%>
   <link rel="stylesheet" href="/stylesheets/stars.css">
+  <link rel="stylesheet" href="/stylesheets/app.css">
+
 
   
 
   <div class="row">
     <div class="col-6">
-      <div id='map' style='width: 400px; height: 300px;'></div>
       <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <% campground.images.forEach((img, i)=>{ %>
@@ -60,6 +61,7 @@
       </div>
     </div>
     <div class="col-6">
+      <div id='map'></div>
       <% if(currentUser){ %>
         <h2>Leave a Review</h2>
         <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="needs-validation" novalidate>
