--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,10 +1,49 @@
-#cluster-map{
+#cluster-map {
     width: 100%;
-    height:500px;
+    height: 500px;
 }
 
 
 #map {
-    width:100%;
-    height:300px;
+    width: 100%;
+    height: 300px;
+}
+
+.boilerBodyBg {
+    background-image: url('https://images.unsplash.com/photo-1511893078133-af69047e2738?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1400&q=80');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.nav-link {
+    padding: 0.25rem 0;
+    font-weight: 700;
+    color: white;
+    margin-left: 1rem;
+    border-bottom: 0.25rem solid transparent;
+}
+
+.nav-link:hover {
+    color: white;
+    border-bottom-color: white;
+}
+
+.PageBg {
+    background-color: rgb(255, 255, 255);
+}
+
+.cardImg {
+   
+    height: 200px;
+    object-fit: cover
+}
+.cardBg{
+    background-color: #4e7aa1;
+}
+.WhiteText{
+    color:white;
+}
+.newForm{
+    background-color: aquamarine;
 }
