--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,39 +1,39 @@
     <% layout('layouts/boilerplate')%>
-    <link rel="stylesheet" href="/stylesheets/app.css">
 
-
-    <div id="cluster-map"></div>
-    <h1 class="mt-2">ALL CAMPGROUNDS</h1>
+    <div id="cluster-map" ></div>
+    <h1 class="mt-2 WhiteText">ALL CAMPGROUNDS</h1>
      <div>
         <!-- <a href="/campgrounds/new">Add Campground</a> -->
     </div> 
     <div class="container">
+        <div class="row">
     <% for(let campground of campgrounds){ %>
-        <div class="card mb-3" >
-            <div class="row">
-                <div class="col-md-4">
+        <div class="col-md-3" >
+            
+                <div class="card mb-3 h-100 cardBg text-white">
                     <% if (campground.images.length) { %>
-                        <img class ="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                        <img class ="img-fluid cardImg" alt="" src="<%=campground.images[0].url%>">
                      
                     <% }else { %> 
-                        <img class ="img-fluid" alt="" src="https://res.cloudinary.com/cypher12/image/upload/v1661765423/YelpCamp/abfipvijgtrdhjzwcvgd.jpg">
+                        <img class ="img-fluid cardImg" alt="" src="https://res.cloudinary.com/cypher12/image/upload/v1661765423/YelpCamp/abfipvijgtrdhjzwcvgd.jpg">
 
 
                     <% } %> 
-                </div>
-                <div class="col-md-8">
+                <!-- </div> -->
+                <!-- <div class="col-md-8"> -->
                     <div class="card-body">
                         <h5 class="card-title"><%=campground.title%></h5>
-                        <p class="card-text"><%=campground.description %></p>
+                        <!-- <p class="card-text"><%=campground.description %></p> -->
                         <p class="card-text">
                             <small class="text-muted"><%=campground.location%></small>
                         </p>
                         <a href="/campgrounds/<%=campground._id%>" class="btn btn-primary">View <%=campground.title%></a>
                     </div>
                 </div>
-            </div>
+            
         </div>
         <%}%>
+    </div>
     </div>
 
         <script>
