--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/boilerplate')%>
 
     <div class="row">
-        <h1 class="text-center">New Campground</h1>
-        <div class="col-md-6 offset-md-3">
+        <h1 class="text-center WhiteText">New Campground</h1>
+        <div class="col-md-6 offset-md-3 newForm WhiteText">
             <form action="/campgrounds" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
@@ -56,7 +56,7 @@
                     <button class="btn btn-success">Add Campground</button>
                 </div>
             </form>
-            <a href="/campgrounds">Back</a>
+            <a href="/campgrounds" class="btn btn-primary">Back</a>
         </div>
     </div>
 
