--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="d-flex flex-column vh-100">
+<body class="d-flex flex-column vh-100 boilerBodyBg">
     <%- include('../partials/navbar') %>
     <main class="container mt-5 mb-5 pt-3">
         <%- include('../partials/flash') %>
