--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,9 @@
-<footer class="footer bg-dark py-3 mt-auto">
+<footer class=" footer bg-transparent py-3 mt-auto text-white-50">
     <div class="container">
-        <span class="text-muted">HellCamp 2022</span>
+        <p>&copy; 2020 StillSites </p>
     </div>
 </footer>
+
+<!-- <footer class="mt-auto text-white-50">
+    footer bg-transparent py-3 mt-auto
+</footer> -->
