--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,6 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark">
+<link rel="stylesheet" href="/stylesheets/app.css">
+
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">StillSites</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -6,7 +8,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/campgrounds">Campgrounds</a>
         <a class="nav-link" href="/campgrounds/new">Add Campground</a>
