--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,8 +3,8 @@
 
         <div class="row">
             <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-                <div class="card shadow">
-                    <img src="https://images.unsplash.com/photo-1660572278100-a13bcbb7f9d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                <div class="card shadow cardBg text-white">
+                    <img src="https://images.unsplash.com/photo-1482784160316-6eb046863ece?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                         alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title"> Login</h5>
