--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,29 +1,5 @@
 <% layout('layouts/boilerplate')%>
-    <!-- <h1>Register</h1>
-<form action ="/register" method="POST" class="needs-validation" novalidate>
-    <div class="mb-3">
-        <label class="form-label" for="username">Username</label>
-        <input class="form-control" type="text" id="username" name="username" required>
-        <div class="invalid-feedback">
-            Please enter username.
-        </div>
-    </div>
-    <div class="mb-3">
-        <label class="form-label" for="email">Email</label>
-        <input class="form-control" type="email" id="email" name="email" required>
-        <div class="invalid-feedback">
-            Please enter your mail.
-        </div>
-    </div>
-    <div class="mb-3">
-        <label class="form-label" for="password">Password</label>
-        <input class="form-control" type="password" id="password" name="password" required>
-        <div class="invalid-feedback">
-            Please enter password.
-        </div>
-    </div>
-    <button class = "btn btn-success">Register</button>
-</form> -->
+   
 
 
 
@@ -32,8 +8,8 @@
 
         <div class="row">
             <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-                <div class="card shadow">
-                    <img src="https://images.unsplash.com/photo-1660572278100-a13bcbb7f9d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                <div class="card shadow cardBg text-white">
+                    <img src="https://images.unsplash.com/photo-1482784160316-6eb046863ece?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                         alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title"> Register </h5>
