--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/app.css">
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark navBg">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">StillSites</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
