--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/boilerplate')%>
 
     <div class="row">
-        <h1 class="text-center">Edit Campground</h1>
-        <div class="col-md-6 offset-md-3">
+        <h1 class="text-center WhiteText">Edit Campground</h1>
+        <div class="col-md-6 offset-md-3 newForm WhiteText">
             <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
@@ -63,7 +63,7 @@
                 </div>
             </form>
             <div class="mb-3">
-            <a  href="/campgrounds/<%= campground._id%>">Back to Campground</a>
+            <a  href="/campgrounds/<%= campground._id%>" class="btn btn-success">Back to Campground</a>
             </div>
         </div>
     </div>
