--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,8 @@
     <% layout('layouts/boilerplate')%>
 
-    <div id="cluster-map" ></div>
+    <div class="d-flex justify-content-center">
+        <div id="cluster-map" class="" ></div>
+    </div>   <!--  -->
     <h1 class="mt-2 WhiteText">ALL CAMPGROUNDS</h1>
      <div>
         <!-- <a href="/campgrounds/new">Add Campground</a> -->
@@ -25,7 +27,7 @@
                         <h5 class="card-title"><%=campground.title%></h5>
                         <!-- <p class="card-text"><%=campground.description %></p> -->
                         <p class="card-text">
-                            <small class="text-muted"><%=campground.location%></small>
+                            <small class="text-white"><%=campground.location%></small>
                         </p>
                         <a href="/campgrounds/<%=campground._id%>" class="btn btn-primary">View <%=campground.title%></a>
                     </div>
