--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,7 +5,7 @@
 
   
 
-  <div class="row">
+  <div class="row WhiteText">
     <div class="col-6">
       <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -27,7 +27,7 @@
           <% } %>
       </div>
 
-      <div class="card mb-3">
+      <div class="card cardBg WhiteText mb-3">
         <div class="card-body">
           <h5 class="card-title">
             <%= campground.title %>
@@ -35,17 +35,16 @@
           <p class="card-text">
             <%= campground.description %>
           </p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item text-muted">
+          <p class="card-text text-light">
             <%= campground.location %>
-          </li>
-          <li class="list-group-item">
+          </p>
+          <p class="card-text text-light">
             Submitted by <%= campground.author.username %>
-          </li>
-          <li class="list-group-item">$<%= campground.price %>/night
-          </li>
-        </ul>
+          </p>
+          <p class="card-text text-light">
+            $<%= campground.price %>/night
+          </p>
+        </div>
         <% if( currentUser && campground.author.equals(currentUser._id)){ %>
           <div class="card-body">
             <a class="card-link btn btn-primary" href="/campgrounds/<%= campground._id%>/edit">Edit</a>
@@ -55,20 +54,16 @@
             </form>
           </div>
           <% } %>
-            <div class="card-footer text-muted">
+            <div class="card-footer text-white">
               2 days ago
             </div>
       </div>
     </div>
-    <div class="col-6">
-      <div id='map'></div>
+    <div class="col-6 newForm">
+      <div id='map' class="mt-3"></div>
       <% if(currentUser){ %>
         <h2>Leave a Review</h2>
         <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="needs-validation" novalidate>
-          <!-- <div class="mb-3">
-          <label class="form-label" for="rating">Rating</label>
-          <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
-        </div> -->
           <div class="mb-3">
             <fieldset class="starability-basic">
               <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" min="1" checked
