--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-center">
         <div id="cluster-map" class="" ></div>
     </div>   <!--  -->
-    <div class="text-center"><h1 class="mt-2 WhiteText"> CAMPGROUNDS</h1></div>
+    <div class="text-center"><h1 class="mt-2 campHed"> CAMPGROUNDS</h1></div>
      <div>
         <!-- <a href="/campgrounds/new">Add Campground</a> -->
     </div> 
