--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,7 +5,7 @@
 
   
 
-  <div class="row WhiteText">
+  <div class="row">
     <div class="col-6">
       <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -100,14 +100,11 @@
                   <%= review.author.username %>
                 </h5>
                 <p class="starability-result" data-rating="<%= review.rating %>">
-                  Rated: <%= review.rating %> stars
+                  rea <%= review.rating %>
                 </p>
 
-                <!-- <h6 class="card-subtitle mb-2 text-muted">By: <%= review.author.username %>
-            </h6> -->
 
-
-                <p class="card-text">Review: <%= review.body %>
+                <p class="card-text">Review:  <%= review.body %>
                 </p>
                 <% if( currentUser && review.author.equals(currentUser._id)){ %>
                   <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
