--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -10,9 +10,9 @@
     <div class="container">
         <div class="row">
     <% for(let campground of campgrounds){ %>
-        <div class="col-md-3" >
+        <div class="col-md-3 mb-3" >
             
-                <div class="card mb-3 h-100 cardBg text-white">
+                <div class="card mb-3 h-100 cardBg text-white ">
                     <% if (campground.images.length) { %>
                         <img class ="img-fluid cardImg" alt="" src="<%=campground.images[0].url%>">
                      
