--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <h1 class="text-center WhiteText">New Campground</h1>
         <div class="col-md-6 offset-md-3 newForm WhiteText">
-            <form action="/campgrounds" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
+            <form action="/campgrounds" method="POST"  class="needs-validation" enctype="multipart/form-data" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]" required>
