changed button and number type

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -36,7 +36,7 @@
                     <label class="form-label" for="price">Price</label>
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="price-label">$</span>
-                        <input type="text" class="form-control" id="price" aria-label="price"
+                        <input type="number" class="form-control" id="price" aria-label="price"
                             aria-describedby="price-label" name="campground[price]" required>
                         <span class="input-group-text" id="price-label">.00</span>
                         <div class="invalid-feedback">
