--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -89,7 +89,7 @@
             </div>
             <div class="valid-feedback"></div>
           </div>
-          <button class="btn btn-primary">submit</button>
+          <button class="btn btn-primary mb-2">submit</button>
         </form>
         <% } %>
 
